k8s/namespaces/monitoring/03-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: "nginx"
  labels:
    app.kubernetes.io/name: grafana
    app.kubernetes.io/part-of: monitoring
spec:
  tls:
  - hosts:
    - grafana.home.pulsifer.ca
    secretName: grafana.home.pulsifer.ca
  defaultBackend:
    service:
      name: grafana
      port:
        number: 3000
  rules:
  - host: grafana.home.pulsifer.ca
    http:
      paths:
      - backend:
          service:
            name: grafana
            port:
              number: 3000
        path: /
        pathType: Prefix
